--- a/spring-netty/src/main/resources/templates/websocket.html
+++ b/spring-netty/src/main/resources/templates/websocket.html
@@ -1,59 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title></title>
 </head>
 <body>
 
 <div>发送消息:</div>
-<input type="text" id="msgContent"/>
+<input type="text" value="" id="msgContent"/>
 <input type="button" value="点我发送" onclick="CHAT.chat()"/>
 
 <div>接受消息：</div>
 <div id="receiveMsg" style="background-color: gainsboro;"></div>
-
+<script src="app.js"></script>
 <script type="application/javascript">
-<!--全局对象-->
+
+    <!--全局对象-->
     window.CHAT = {
         //定义一个变量
         socket: null,
         //初始化
-        init: function() {
+        init: function () {
             //判断浏览器是否支持websocket
             if (window.WebSocket) {
                 //如果当前websocket状态已经连接，无需重复初始化websocket
-                //创建websocket对象
-                CHAT.socket = new WebSocket("ws://192.168.0.129:8088/ws");
-                CHAT.socket.onopen = function() {
-                    console.log("连接建立成功...");
-                },
-                    CHAT.socket.onclose = function() {
-                        console.log("连接关闭...");
+                if (CHAT.socket != null && CHAT.socket != undefined && CHAT.socket.readyState == WebSocket.OPEN) {
+                    return false;
+                }
+                //创建websocket 对象
+                try {
+                    //创建websocket对象
+                    CHAT.socket = new WebSocket("ws://192.168.0.129:8088/ws");
+                    CHAT.socket.onopen = function () {
+                        console.log("连接建立成功...");
+                        //    获取当前用户id
+                        var myId = "1"
+                        //    构建chatMsg聊天消息
+                        var chatMsg = new app.ChatMsg(myId, null, null, null);
+                        //    第一次(或重连)初始化连接
+                        var dataContent = new app.DataContent(app.CONNECT, chatMsg, null);
+                        //    转变为string类型发送到服务器
+                        CHAT.chats(JSON.stringify(dataContent));
                     },
-                    CHAT.socket.onerror = function() {
-                        console.log("发生错误...");
-                    },
-                    CHAT.socket.onmessage = function(e) {
-                        console.log("接受到消息：" + e.data);
+                        CHAT.socket.onclose = function () {
+                            console.log("连接关闭...");
+                        },
+                        CHAT.socket.onerror = function () {
+                            console.log("发生错误...");
+                        },
+                        CHAT.socket.onmessage = function (e) {
+                            console.log("接受到消息：" + e.data);
 
-                        //获取浏览器获取到的消息
-                        var receiveMsg = document.getElementById("receiveMsg");
-                        var html = receiveMsg.innerHTML;//获取本对象原有的内容
-                        //嵌入新的内容
-                        receiveMsg.innerHTML = html + "<br/>" + e.data;
-                    }
+                            //获取浏览器获取到的消息
+                            var receiveMsg = document.getElementById("receiveMsg");
+                            var html = receiveMsg.innerHTML;//获取本对象原有的内容
+                            //嵌入新的内容
+                            receiveMsg.innerHTML = html + "<br/>" + e.data;
+                        }
+                } catch (e) {
+                    console.log(e.message);
+                }
             } else {
                 alert("浏览器不支持websocket协议...");
             }
         },
         //聊天
-        chat: function() {
-            //获取发送消息框中所输入的内容
-            var msg = document.getElementById("msgContent");
-
-            //将客户端输入的消息进行发送
-            CHAT.socket.send(msg.value+","+"dd");
+        chat: function () {
+            //如果当前WebSocket 状态已经连接，无需重复初始化WebSocket
+            if (CHAT.socket != null && CHAT.socket != undefined && CHAT.socket.readyState == WebSocket.OPEN) {
+                //    获取当前用户id
+                var myId = "1"
+                //获取发送消息框中所输入的内容
+                var msg = document.getElementById("msgContent");
+                console.log(msg)
+                //    构建chatMsg聊天消息
+                var chatMsg = new app.ChatMsg(myId, null, msg.value, null);
+                //    第一次(或重连)初始化连接
+                var dataContent = new app.DataContent(2, chatMsg, null);
+                //将客户输入的消息进行发送
+                CHAT.socket.send(JSON.stringify(dataContent));
+            } else {
+                CHAT.init();
+            }
+        },
+        //聊天
+        chats: function (msg) {
+            //如果当前WebSocket 状态已经连接，无需重复初始化WebSocket
+            if (CHAT.socket != null && CHAT.socket != undefined && CHAT.socket.readyState == WebSocket.OPEN) {
+                //将客户输入的消息进行发送
+                CHAT.socket.send(msg);
+            } else {
+                CHAT.init();
+            }
         }
     };
 
